src/fr/ubordeaux/deptinfo/compilation/lea/parser/Parser.output
Terminals unused in grammar

    "comparable"
    "equivalent"


State 270 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: imports declarations
    2  | error $end

    3 imports: %empty
    4        | imports import

    5 import: "import" LITTERAL_STRING

    6 declarations: declarations declaration
    7             | declaration

    8 declaration: "class" IDENTIFIER implements extends '{' classDefinition '}'
    9            | "class" "main" '{' classDefinition '}'
   10            | "interface" IDENTIFIER extends_public '{' interfaceDefinition '}'

   11 implements: %empty
   12           | "implements" classNames

   13 extends: %empty
   14        | "extends" determiner className

   15 extends_public: %empty
   16               | "extends" className

   17 classNames: classNames ',' className
   18           | className

   19 className: IDENTIFIER
   20          | IDENTIFIER '<' classNames '>'

   21 classDefinition: %empty
   22                | classDefinitionContent classDefinition

   23 classDefinitionContent: typeDefinition
   24                       | constDefinition
   25                       | attributeDefinition
   26                       | methodDefinition

   27 typeDefinition: "type" IDENTIFIER ":=" typeExpr

   28 constDefinition: "const" IDENTIFIER ":=" constExpr

   29 attributeDefinition: determiner IDENTIFIER ':' typeExpr ';'

   30 methodDefinition: "main" '(' argsDefinition ')' block

   31 $@1: %empty

   32 methodDefinition: determiner IDENTIFIER '(' argsDefinition ')' $@1 block

   33 $@2: %empty

   34 methodDefinition: determiner IDENTIFIER '(' argsDefinition ')' $@2 ';'

   35 $@3: %empty

   36 methodDefinition: determiner specifier "procedure" IDENTIFIER '(' argsDefinition ')' $@3 block

   37 $@4: %empty

   38 methodDefinition: determiner specifier "procedure" IDENTIFIER '(' argsDefinition ')' $@4 ';'

   39 $@5: %empty

   40 methodDefinition: determiner specifier "function" IDENTIFIER '(' argsDefinition ')' ':' typeExpr $@5 block

   41 $@6: %empty

   42 methodDefinition: determiner specifier "function" IDENTIFIER '(' argsDefinition ')' ':' typeExpr $@6 ';'

   43 $@7: %empty

   44 methodDefinition: "operator" user_defined_operators '(' argsDefinition ')' ':' typeExpr $@7 block

   45 $@8: %empty

   46 methodDefinition: "operator" user_defined_operators '(' argsDefinition ')' ':' typeExpr $@8 ';'

   47 determiner: %empty
   48           | "private"
   49           | "public"
   50           | "protected"

   51 specifier: %empty
   52          | "virtual"
   53          | "final"

   54 user_defined_operators: "&&"
   55                       | "||"
   56                       | '!'
   57                       | '<'
   58                       | "<="
   59                       | '>'
   60                       | ">="
   61                       | "=="
   62                       | "!="
   63                       | '+'
   64                       | '-'
   65                       | '*'
   66                       | '/'
   67                       | '%'
   68                       | "++"
   69                       | "--"
   70                       | '&'
   71                       | '|'
   72                       | "<<"
   73                       | ">>"
   74                       | ":="
   75                       | "+="
   76                       | "-="
   77                       | "*="
   78                       | "/="
   79                       | "%="
   80                       | "||="
   81                       | "&&="
   82                       | "&="
   83                       | "|="
   84                       | "<<="
   85                       | ">>="
   86                       | "[]"

   87 interfaceDefinition: "procedure" IDENTIFIER '(' argsDefinition ')' ';'
   88                    | "function" IDENTIFIER '(' argsDefinition ')' ':' typeExpr ';'

   89 typeExpr: "char"
   90         | "integer"
   91         | "float"
   92         | "boolean"
   93         | "string"
   94         | "enum" '<' typeNames '>'
   95         | "range" '<' typeExpr '>'
   96         | "list" '<' typeExpr '>'
   97         | "set" '<' typeExpr '>'
   98         | "map" '<' typeExpr ',' typeExpr '>'
   99         | typePtrExpr

  100 typePtrExpr: IDENTIFIER '<' typeExprs '>'
  101            | IDENTIFIER

  102 typeExprs: typeExprs ',' typeExpr
  103          | typeExpr

  104 typeNames: typeNames ',' typeName
  105          | typeName

  106 typeName: IDENTIFIER

  107 argsDefinition: argsDefinition ',' argDefinition
  108               | argDefinition

  109 argDefinition: IDENTIFIER ':' typeExpr

  110 block: '{' varDefinitions stms '}'

  111 varDefinitions: %empty
  112               | varDefinitions varDefinition

  113 varDefinition: IDENTIFIER ':' typeExpr ';'

  114 stms: stms stm
  115     | stm

  116 stm: simple_stm ';'
  117    | for_stm
  118    | "if" '(' expr ')' stm
  119    | "if" '(' expr ')' stm "else" stm
  120    | "while" '(' expr ')' stm
  121    | "do" stm "while" '(' expr ')' ';'
  122    | "for" '(' assignedVariable ':' expr ')' stm
  123    | "foreach" assignedVariable "in" expr stm
  124    | block

  125 for_stm: "for" '(' assignedVariable ';' expr ';' expr ')' block
  126        | "for" '(' assignedVariable ":=" constExpr ';' expr ';' expr ')' block
  127        | "for" '(' IDENTIFIER ':' typeExpr ';' expr ';' expr ')' block
  128        | "for" error ';'
  129        | "for" error $end

  130 simple_stm: assignedVariable ":=" expr
  131           | assignedVariable "++"
  132           | assignedVariable "--"
  133           | assignedVariable "+=" expr
  134           | assignedVariable "-=" expr
  135           | assignedVariable "*=" expr
  136           | assignedVariable "/=" expr
  137           | assignedVariable "%=" expr
  138           | assignedVariable "||=" expr
  139           | assignedVariable "&&=" expr
  140           | assignedVariable "&=" expr
  141           | assignedVariable "|=" expr
  142           | assignedVariable "<<=" expr
  143           | assignedVariable ">>=" expr
  144           | methodName '(' args ')'
  145           | "readln" '(' expr ')'
  146           | "write" '(' expr ')'
  147           | "writeln" '(' expr ')'
  148           | "break"
  149           | "continue"
  150           | "return" expr

  151 assignedVariable: IDENTIFIER
  152                 | IDENTIFIER '[' args ']'
  153                 | assignedVariable '.' IDENTIFIER
  154                 | "this"

  155 methodName: IDENTIFIER
  156           | assignedVariable '.' IDENTIFIER

  157 args: args ',' expr
  158     | expr

  159 constExpr: "null"
  160          | NUMBER_INTEGER
  161          | NUMBER_FLOAT
  162          | LITTERAL_CHAR
  163          | LITTERAL_STRING
  164          | '[' NUMBER_INTEGER ".." NUMBER_INTEGER ']'

  165 expr: constExpr
  166     | assignedVariable
  167     | methodName '(' args ')'
  168     | "new" typePtrExpr '(' args_opt ')'
  169     | expr "&&" expr
  170     | expr "||" expr
  171     | '!' expr
  172     | expr '<' expr
  173     | expr "<=" expr
  174     | expr '>' expr
  175     | expr ">=" expr
  176     | expr "==" expr
  177     | expr "!=" expr
  178     | expr '+' expr
  179     | expr '-' expr
  180     | '-' expr
  181     | expr '*' expr
  182     | expr '/' expr
  183     | expr '%' expr
  184     | expr "++"
  185     | expr "--"
  186     | "++" expr
  187     | "--" expr
  188     | expr '&' expr
  189     | expr '|' expr
  190     | expr "<<" expr
  191     | expr ">>" expr
  192     | '(' expr ')'

  193 args_opt: %empty
  194         | args


Terminals, with rules where they appear

    $end (0) 0 2 129
    '!' (33) 56 171
    '%' (37) 67 183
    '&' (38) 70 188
    '(' (40) 30 32 34 36 38 40 42 44 46 87 88 118 119 120 121 122 125 126 127 144 145 146 147 167 168 192
    ')' (41) 30 32 34 36 38 40 42 44 46 87 88 118 119 120 121 122 125 126 127 144 145 146 147 167 168 192
    '*' (42) 65 181
    '+' (43) 63 178
    ',' (44) 17 98 102 104 107 157
    '-' (45) 64 179 180
    '.' (46) 153 156
    '/' (47) 66 182
    ':' (58) 29 40 42 44 46 88 109 113 122 127
    ';' (59) 29 34 38 42 46 87 88 113 116 121 125 126 127 128
    '<' (60) 20 57 94 95 96 97 98 100 172
    '>' (62) 20 59 94 95 96 97 98 100 174
    '[' (91) 152 164
    ']' (93) 152 164
    '{' (123) 8 9 10 110
    '|' (124) 71 189
    '}' (125) 8 9 10 110
    error (256) 2 128 129
    ":=" (258) 27 28 74 126 130
    "+=" (259) 75 133
    "-=" (260) 76 134
    "*=" (261) 77 135
    "/=" (262) 78 136
    "%=" (263) 79 137
    "||=" (264) 80 138
    "&&=" (265) 81 139
    "&=" (266) 82 140
    "|=" (267) 83 141
    "<<=" (268) 84 142
    ">>=" (269) 85 143
    "++" (270) 68 131 184 186
    "--" (271) 69 132 185 187
    "&&" (272) 54 169
    "||" (273) 55 170
    "<<" (274) 72 190
    ">>" (275) 73 191
    ".." (276) 164
    "==" (277) 61 176
    "<=" (278) 58 173
    ">=" (279) 60 175
    "!=" (280) 62 177
    "boolean" (281) 92
    "break" (282) 148
    "char" (283) 89
    "class" (284) 8 9
    "comparable" (285)
    "const" (286) 28
    "continue" (287) 149
    "do" (288) 121
    "else" (289) 119
    "enum" (290) 94
    "equivalent" (291)
    "extends" (292) 14 16
    "final" (293) 53
    "float" (294) 91
    "for" (295) 122 125 126 127 128 129
    "foreach" (296) 123
    "function" (297) 40 42 88
    "if" (298) 118 119
    "implements" (299) 12
    "import" (300) 5
    "in" (301) 123
    "integer" (302) 90
    "interface" (303) 10
    "list" (304) 96
    "map" (305) 98
    "main" (306) 9 30
    "new" (307) 168
    "null" (308) 159
    "operator" (309) 44 46
    "private" (310) 48
    "protected" (311) 50
    "public" (312) 49
    "procedure" (313) 36 38 87
    "range" (314) 95
    "readln" (315) 145
    "return" (316) 150
    "set" (317) 97
    "string" (318) 93
    "this" (319) 154
    "type" (320) 27
    "virtual" (321) 52
    "write" (322) 146
    "writeln" (323) 147
    "while" (324) 120 121
    IDENTIFIER <String> (325) 8 10 19 20 27 28 29 32 34 36 38 40 42 87 88 100 101 106 109 113 127 151 152 153 155 156
    LITTERAL_STRING <String> (326) 5 163
    NUMBER_INTEGER <Integer> (327) 160 164
    LITTERAL_CHAR <Integer> (328) 162
    NUMBER_FLOAT <Float> (329) 161
    WITHOUT_ELSE (330)
    DETERMINER (331)
    SPECIFIER (332)
    LEFTPLUSPLUS (333)
    LEFTMINUSMINUS (334)
    UMINUS (335)
    "[]" (336) 86


Nonterminals, with rules where they appear

    $accept (102)
        on left: 0
    S (103)
        on left: 1 2
        on right: 0
    imports (104)
        on left: 3 4
        on right: 1 4
    import (105)
        on left: 5
        on right: 4
    declarations (106)
        on left: 6 7
        on right: 1 6
    declaration (107)
        on left: 8 9 10
        on right: 6 7
    implements (108)
        on left: 11 12
        on right: 8
    extends (109)
        on left: 13 14
        on right: 8
    extends_public (110)
        on left: 15 16
        on right: 10
    classNames (111)
        on left: 17 18
        on right: 12 17 20
    className (112)
        on left: 19 20
        on right: 14 16 17 18
    classDefinition (113)
        on left: 21 22
        on right: 8 9 22
    classDefinitionContent (114)
        on left: 23 24 25 26
        on right: 22
    typeDefinition (115)
        on left: 27
        on right: 23
    constDefinition (116)
        on left: 28
        on right: 24
    attributeDefinition (117)
        on left: 29
        on right: 25
    methodDefinition (118)
        on left: 30 32 34 36 38 40 42 44 46
        on right: 26
    $@1 (119)
        on left: 31
        on right: 32
    $@2 (120)
        on left: 33
        on right: 34
    $@3 (121)
        on left: 35
        on right: 36
    $@4 (122)
        on left: 37
        on right: 38
    $@5 (123)
        on left: 39
        on right: 40
    $@6 (124)
        on left: 41
        on right: 42
    $@7 (125)
        on left: 43
        on right: 44
    $@8 (126)
        on left: 45
        on right: 46
    determiner (127)
        on left: 47 48 49 50
        on right: 14 29 32 34 36 38 40 42
    specifier (128)
        on left: 51 52 53
        on right: 36 38 40 42
    user_defined_operators <String> (129)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
        on right: 44 46
    interfaceDefinition (130)
        on left: 87 88
        on right: 10
    typeExpr <Type> (131)
        on left: 89 90 91 92 93 94 95 96 97 98 99
        on right: 27 29 40 42 44 46 88 95 96 97 98 102 103 109 113 127
    typePtrExpr <Type> (132)
        on left: 100 101
        on right: 99 168
    typeExprs <Type> (133)
        on left: 102 103
        on right: 100 102
    typeNames <Type> (134)
        on left: 104 105
        on right: 94 104
    typeName <Type> (135)
        on left: 106
        on right: 104 105
    argsDefinition <Type> (136)
        on left: 107 108
        on right: 30 32 34 36 38 40 42 44 46 87 88 107
    argDefinition <Type> (137)
        on left: 109
        on right: 107 108
    block (138)
        on left: 110
        on right: 30 32 36 40 44 124 125 126 127
    varDefinitions (139)
        on left: 111 112
        on right: 110 112
    varDefinition (140)
        on left: 113
        on right: 112
    stms (141)
        on left: 114 115
        on right: 110 114
    stm (142)
        on left: 116 117 118 119 120 121 122 123 124
        on right: 114 115 118 119 120 121 122 123
    for_stm (143)
        on left: 125 126 127 128 129
        on right: 117
    simple_stm (144)
        on left: 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150
        on right: 116
    assignedVariable <Type> (145)
        on left: 151 152 153 154
        on right: 122 123 125 126 130 131 132 133 134 135 136 137 138 139 140 141 142 143 153 156 166
    methodName <Type> (146)
        on left: 155 156
        on right: 144 167
    args <Type> (147)
        on left: 157 158
        on right: 144 152 157 167 194
    constExpr <Type> (148)
        on left: 159 160 161 162 163 164
        on right: 28 126 165
    expr <Type> (149)
        on left: 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192
        on right: 118 119 120 121 122 123 125 126 127 130 133 134 135 136 137 138 139 140 141 142 143 145 146 147 150 157 158 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192
    args_opt <Type> (150)
        on left: 193 194
        on right: 168


State 0

    0 $accept: • S $end
    1 S: • imports declarations
    2  | • error $end
    3 imports: • %empty
    4        | • imports import

    error  shift, and go to state 1

    "class"      reduce using rule 3 (imports)
    "import"     reduce using rule 3 (imports)
    "interface"  reduce using rule 3 (imports)

    S        go to state 2
    imports  go to state 3


State 1

    2 S: error • $end

    $end  shift, and go to state 4


State 2

    0 $accept: S • $end

    $end  shift, and go to state 5


State 3

    1 S: imports • declarations
    4 imports: imports • import
    5 import: • "import" LITTERAL_STRING
    6 declarations: • declarations declaration
    7             | • declaration
    8 declaration: • "class" IDENTIFIER implements extends '{' classDefinition '}'
    9            | • "class" "main" '{' classDefinition '}'
   10            | • "interface" IDENTIFIER extends_public '{' interfaceDefinition '}'

    "class"      shift, and go to state 6
    "import"     shift, and go to state 7
    "interface"  shift, and go to state 8

    import        go to state 9
    declarations  go to state 10
    declaration   go to state 11


State 4

    2 S: error $end •

    $default  reduce using rule 2 (S)


State 5

    0 $accept: S $end •

    $default  accept


State 6

    8 declaration: "class" • IDENTIFIER implements extends '{' classDefinition '}'
    9            | "class" • "main" '{' classDefinition '}'

    "main"      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13


State 7

    5 import: "import" • LITTERAL_STRING

    LITTERAL_STRING  shift, and go to state 14


State 8

   10 declaration: "interface" • IDENTIFIER extends_public '{' interfaceDefinition '}'

    IDENTIFIER  shift, and go to state 15


State 9

    4 imports: imports import •

    $default  reduce using rule 4 (imports)


State 10

    1 S: imports declarations •
    6 declarations: declarations • declaration
    8 declaration: • "class" IDENTIFIER implements extends '{' classDefinition '}'
    9            | • "class" "main" '{' classDefinition '}'
   10            | • "interface" IDENTIFIER extends_public '{' interfaceDefinition '}'

    "class"      shift, and go to state 6
    "interface"  shift, and go to state 8

    $default  reduce using rule 1 (S)

    declaration  go to state 16


State 11

    7 declarations: declaration •

    $default  reduce using rule 7 (declarations)


State 12

    9 declaration: "class" "main" • '{' classDefinition '}'

    '{'  shift, and go to state 17


State 13

    8 declaration: "class" IDENTIFIER • implements extends '{' classDefinition '}'
   11 implements: • %empty
   12           | • "implements" classNames

    "implements"  shift, and go to state 18

    $default  reduce using rule 11 (implements)

    implements  go to state 19


State 14

    5 import: "import" LITTERAL_STRING •

    $default  reduce using rule 5 (import)


State 15

   10 declaration: "interface" IDENTIFIER • extends_public '{' interfaceDefinition '}'
   15 extends_public: • %empty
   16               | • "extends" className

    "extends"  shift, and go to state 20

    $default  reduce using rule 15 (extends_public)

    extends_public  go to state 21


State 16

    6 declarations: declarations declaration •

    $default  reduce using rule 6 (declarations)


State 17
